Device Home added to Device Model (#240)
* Device Home added to Device Model

* Device export order fixed

* Swagger and get all devices test updated
